# python_catch_up

./: .gitignore  .tool-versions  README.md
calculator/: pyproject.toml
calculator/app/: main.py
python-catch-up/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
python-catch-up/docs/: fastapi_admin.md  graphql.md  graphql_codegen.md  react_admin.md
python-catch-up/python_catch_up/: config.py  main.py  schema.graphql
python-catch-up/python_catch_up/admin/: __init__.py  admin.py  custom_field.py  resources.py
python-catch-up/python_catch_up/admin/templates/: dashboard.html
python-catch-up/python_catch_up/database/: database.py
python-catch-up/python_catch_up/graphql_api/: schema.py
python-catch-up/python_catch_up/graphql_api/resolvers/: client.py
python-catch-up/python_catch_up/graphql_api/schemas/operations/: client.py
python-catch-up/python_catch_up/graphql_api/schemas/type/: client.py  meta_data.py  project.py  project_budget.py  project_slot.py
python-catch-up/python_catch_up/models/: error_response.py  models.py  user.py
python-catch-up/python_catch_up/routers/: admin_router.py  client.py  graphql_router.py  programmers_router.py  project.py  users.py  users_router.py
python-catch-up/python_catch_up/schemas/: graphql_schemas.py  schemas.py  user.py
python-catch-up/python_catch_up/services/: client_crud.py  graphql_clients_crud.py  graphql_programmers_crud.py  programmers_crud.py  project_crud.py  users_crud.py
python-catch-up/tests/: README.md  conftest.py  test_api.py
